Geometry Nodes: Simulation nodes not work with sampling nodes if value is single #109341

Closed
opened 2023-06-25 14:03:39 +02:00 by Aidan-Sanderson · 1 comment

Blender Version
Broken: Last main.
Worked: Never.

Short description of error
If pass result of any sampling nodes (RayCast, Sample Index, Sample Nearest, ...) via simulation output node, result will be none.

Constant value input Sampled value from geometry
image image

Exact steps for others to reproduce the error
From scratch:

  1. In Geometry Nodes tree add simulation nodes pair.
  2. Delete geometry socket from simulation node settings.
  3. Add Mesh Primitive → Capture Attribute → Sample Index → Simulation output.
  4. See different values in tooltips.

Or open attached example file.

**Blender Version** Broken: Last main. Worked: Never. **Short description of error** If pass result of any sampling nodes (RayCast, Sample Index, Sample Nearest, ...) via simulation output node, result will be none. | Constant value input | Sampled value from geometry | | -- | -- | | ![image](/attachments/e4c2d87f-a2d3-43ef-8675-295f7e17930f) | ![image](/attachments/44b725f0-93ff-4c22-8b60-470c825ff2d9) | **Exact steps for others to reproduce the error** From scratch: 1. In Geometry Nodes tree add simulation nodes pair. 2. Delete geometry socket from simulation node settings. 3. Add Mesh Primitive → Capture Attribute → Sample Index → Simulation output. 4. See different values in tooltips. Or open attached example file.
Aidan-Sanderson added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-06-25 14:03:40 +02:00
Iliya Katushenock changed title from simulation nodes and raycast node error to Geometry Nodes: Simulation nodes not work with sampling nodes if value is single 2023-06-25 14:26:00 +02:00

Hello, thanks for the report. I edited it to make it easier to understand what exactly the bug is.

Hello, thanks for the report. I edited it to make it easier to understand what exactly the bug is.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-10 19:11:16 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109341
No description provided.