Fix #109341: Try to store single value fields as single in simulation

Sampling nodes produce fields, but can be used for
single values. If this used in simulation, this will not work
correctly, not similar as other singles. Just compute these
fields as single to store in Simulation Output node.

Pull Request: https://projects.blender.org/blender/blender/pulls/109879